--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-copy.src.files=true
+copy.src.files=false
 copy.src.on.open=false
 copy.src.target=C:\\xampp\\htdocs\\PhpProject1
 index.file=index.php
